# cust-cost

./: .gitignore  .replit  01_Problem_Definition.md  02_PRD.md  03_User_Personas_and_Journeys.md  Master Data.xlsx  calculation.csv  calculation.xlsx  costing_tool.db  extract_costing_data.py  extracted_costing_data.json  pyproject.toml  replit.md  scratch_formulas.py  scratch_print.py  start.sh  target_ux.md  test_bom_engine.py  test_e2e.py
.agents/: agent_assets_metadata.toml
.agents/memory/: MEMORY.md  git-pull-first.md
archive/: gemini_gem_instructions.md
backend/: README.md  costing_tool.db  pyproject.toml
backend/app/: main.py
backend/app/auth/: dependencies.py
backend/app/db/: costing_tool.db  seed.py
backend/app/engine/: bom_engine.py  costing_engine.py  feature_library.py
backend/app/extraction/: consistency.py  logger.py  prompt.py  provider.py  service.py
backend/app/models/: feature_db.py  quote.py  rate_db.py  settings_db.py
backend/app/routers/: admin_rates.py  features.py  quotes.py  settings.py
backend/app/schemas/: admin.py  bom.py  extraction.py  feature.py  quote.py  settings.py
backend/data/extraction_logs/: extraction_log.jsonl
backend/tests/: test_admin_rates_import.py  test_bom.py  test_caching.py  test_extraction.py  test_features.py
docs/requirements/: user-journey-requirements.md
frontend/: index.css  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/components/ui/: Badge.tsx  (+3 more)
scripts/: auto-push-github.sh  install-git-hooks.sh  post-merge.sh  push-github.sh
(+14 files in other folders)
